--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-core</artifactId>
+            <version>3.7.3</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
