--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,19 @@
             <artifactId>spring-data-rest-core</artifactId>
             <version>3.7.3</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.3.0</version>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
