--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+
+
 ### DATABASE ###
 spring.datasource.url=jdbc:mysql://localhost:3306/MobiliteInternational\
 ?createDatabaseIfNotExist=true\
@@ -8,7 +10,14 @@ spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 server.port=8085
+### email ###
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bayrem.hamdi@esprit.tn
+spring.mail.password=tekvlcdjbwsqwvqt
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
