--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>spring-data-rest-core</artifactId>
             <version>3.7.3</version>
         </dependency>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.24</version>
+		</dependency>
     </dependencies>
 
 	<build>
