User Authentification / user Email verification with a token / logging out

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,16 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 server.port=8085
 
 
+imobility.jwtSecret=404debuggers
+imobility.jwtExpirationMs= 20212022
+
+
+spring.mail.host = smtp.gmail.com
+spring.mail.port=587
+spring.mail.username = abdellaziz.elloumi@esprit.tn
+spring.mail.password = ellouminati20
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
