--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,15 @@
             <artifactId>spring-data-rest-core</artifactId>
             <version>3.7.3</version>
         </dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
     </dependencies>
 
 	<build>
