--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-
-
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/MobiliteInternational\
+spring.datasource.url=jdbc:mysql://localhost:3306/MobiliteInternational2\
 ?createDatabaseIfNotExist=true\
 &useUnicode=true\
 &useJDBCCompliantTimezoneShift=true\
@@ -17,7 +15,7 @@ server.port=8085
 ### email ###
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=bayrem.hamdi@esprit.tn
-spring.mail.password=tekvlcdjbwsqwvqt
+spring.mail.username=mobilityinternational29@gmail.com
+spring.mail.password=egnpqyxqeyybaqeh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
