--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,16 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 server.port=8085
+### email ###
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mobilityinternational29@gmail.com
+spring.mail.password=egnpqyxqeyybaqeh
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+### SMS ###
+twilio.accountSid=AC288321d328b424dac61692d762983fe9
+twilio.authToken=8f23d52aa9d3dc50cdb59c5ebb8a81de
+twilio.fromPhoneNumber=+15074194759
