--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/MobiliteInternational\
+spring.datasource.url=jdbc:mysql://localhost:3306/MobiliteInternational2\
 ?createDatabaseIfNotExist=true\
 &useUnicode=true\
 &useJDBCCompliantTimezoneShift=true\
@@ -19,6 +19,9 @@ spring.mail.username=mobilityinternational29@gmail.com
 spring.mail.password=egnpqyxqeyybaqeh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+###JWT###
+imobility.jwtSecret=404debuggers
+imobility.jwtExpirationMs= 20212022
 ### SMS ###
 twilio.accountSid=AC288321d328b424dac61692d762983fe9
 twilio.authToken=8f23d52aa9d3dc50cdb59c5ebb8a81de
